@@ -1,3 +1,7 @@
+2011-05-20  Pedro Alves  <pedro@codesourcery.com>
+
+	* tracepoint.c (tfile_open): Delete #if 0'd code.
+
 2011-05-20  Hui Zhu  <teawater@gmail.com>
 
 	* tracepoint.c (tfile_trace_find): Return directly when num is -1.
